# test

src/: buff_inference.cpp  buff_inference.h
src/buff_detect/: CMakeLists.txt  package.xml
src/buff_detect/include/buff_detect/: buff_detect_node.h  detect.h  pnp.h
src/buff_detect/model/: best.xml  metadata.yaml
src/buff_detect/src/: buff_detect_node.cpp  camera_read.cpp  detect.cpp  pnp.cpp
src/buff_predict/: CMakeLists.txt  package.xml
src/buff_predict/include/buff_predict/: buff_predict_node.h  kalman.h  solver.h  tracker.h
src/buff_predict/src/: kalman.cpp  solver.cpp
src/global_msg/: CMakeLists.txt  package.xml
src/global_msg/msg/: DetectMsg.msg
